ADD_SUBDIRECTORY(dom_build)
ADD_SUBDIRECTORY(dom_parse_entities)
ADD_SUBDIRECTORY(dom_parser)
ADD_SUBDIRECTORY(dom_parser_raw)
ADD_SUBDIRECTORY(dom_read_write)
ADD_SUBDIRECTORY(dom_xpath)
ADD_SUBDIRECTORY(dtdvalidation)
ADD_SUBDIRECTORY(import_node)
ADD_SUBDIRECTORY(sax_exception)
ADD_SUBDIRECTORY(sax_parser)
ADD_SUBDIRECTORY(sax_parser_build_dom)
ADD_SUBDIRECTORY(sax_parser_entities)
ADD_SUBDIRECTORY(schemavalidation)
ADD_SUBDIRECTORY(textreader)
